feat (CORE STYLE) : styling of introduction page almost accomplished

--- a/CSS/_assets.scss
+++ b/CSS/_assets.scss
@@ -1,9 +1,4 @@
-$main-color : #f0f0f0;
-$main-grey : #E5E6E4;
-$grey : #CFD2CD;
-$dark-grey : #A6A2A2;
-$brown : #847577;
-
+$background : linear-gradient(to bottom, #22232C, #0F0F0F);
 @font-face {
     font-family: 'Ahganirya';
     src: url("ASSETS/FONTS/Ahganirya.ttf");
