--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,23 +1,82 @@
 @font-face {
-  font-family: "Ahganirya";
-  src: url("../ASSETS/FONTS/Ahganirya.woff2") format("woff2");
+  font-family: "Fraunces";
+  src: url("../ASSETS/FONTS/Fraunces.woff2") format("woff2");
 }
 @font-face {
-  font-family: "Moguine";
-  src: url("../ASSETS/FONTS/Moguine.woff2") format("woff2");
+  font-family: "details";
+  src: url("../ASSETS/FONTS/details.woff2") format("woff2");
 }
 body {
-  height: auto;
+  height: 100vh;
   width: 100vw;
-  background-color: #E5EDEF;
+  background: linear-gradient(to bottom, #22232C, #0F0F0F);
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 body main {
-  color: #A6A2A2;
-  font-family: "Ahganirya";
+  color: white;
+  font-family: "Fraunces";
 }
 body main .title {
-  font-family: "Moguine";
-  font-size: 10vw;
-  color: #1E2426;
+  height: 100vh;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Fraunces";
+  font-size: 13vw;
+  line-height: 0.9;
+}
+body main .title .cursive {
+  font-family: "details";
+  color: #56FF90;
+  font-size: 13vw;
+}
+body main .title #G {
+  margin-right: 1.3vw;
+}
+body main nav {
+  width: 27%;
+  height: 70px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  display: flex;
+}
+body main nav .right-edge {
+  border-right: 1px solid white;
+}
+body main nav .link {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2vw;
+  text-decoration: none;
+  color: white;
+}
+body main nav .link a {
+  text-decoration: none;
+  color: white;
+  transition: 0.5s;
+}
+body main nav .link a:hover {
+  color: #56FF90;
+}
+body main .centered-losange--wrapper {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body main .centered-losange--wrapper .centered-losange {
+  height: 350px;
+  width: 350px;
+  position: absolute;
+  background: linear-gradient(to right, rgba(189, 243, 255, 0.13), transparent);
+  transform: rotate(45deg);
 }/*# sourceMappingURL=style.css.map */
