--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,33 +1,97 @@
 @font-face {
-    font-family: 'Ahganirya';
-    src: url("../ASSETS/FONTS/Ahganirya.woff2") format("woff2");
+    font-family: 'Fraunces';
+    src: url("../ASSETS/FONTS/Fraunces.woff2") format("woff2");
 }
 
 @font-face {
-    font-family: 'Moguine';
-    src: url("../ASSETS/FONTS/Moguine.woff2") format("woff2");
+    font-family: 'details';
+    src: url("../ASSETS/FONTS/details.woff2") format("woff2");
 }
 
-$main-color : #E5EDEF;
-$grey : #B7C3C5;
-$dark : #1E2426;
-$title-font : 'Moguine';
-$main-font : 'Ahganirya';
 
+$details-font : 'details';
+$main-font : 'Fraunces';
+$background : linear-gradient(to bottom, #22232C, #0F0F0F);
+$component-background : rgba(0, 0, 0, 32%);
+$details-color: #56FF90;
+$rectangle-background: linear-gradient(to right, rgba(189, 243, 255, 13%), transparent);
+$title-size: 13vw;
+$text-size: 1.5vw;
 
 body {
-    height: auto;
+    height: 100vh;
     width: 100vw;
-    background-color: $main-color;
+    background: $background;
     overflow-x: hidden;
+    overflow-y: hidden;
     main {
-        color : $dark-grey;
+        color : white;
         font-family : $main-font;
 
         .title {
-            font-family : $title-font;
-            font-size : 10vw;
-            color : $dark;
+            height: 100vh;
+            display: flex;
+            width: 100%;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-family : $main-font;
+            font-size : 13vw;
+            line-height: 0.90;
+            .cursive {
+                font-family : $details-font;
+                color: $details-color;
+                font-size: $title-size;
+            } #G {
+                margin-right: 1.3vw;
+            }
         }
-    }
+
+
+
+        nav {
+            width: 27%;
+            height: 70px;
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            display: flex;
+            .right-edge { border-right: 1px solid white; }
+            .link {
+                width: 100%;
+                height: 70%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size : 2vw;
+                text-decoration: none;
+                color: white;
+                a {
+                    text-decoration: none;
+                    color: white;
+                    transition: 0.5s;
+                    &:hover { color: $details-color; }
+                }
+            }
+        }
+
+
+
+        .centered-losange--wrapper {
+            position: absolute;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .centered-losange {
+                height: 350px;
+                width: 350px;
+                position: absolute;
+                background: $rectangle-background;
+                transform: rotate(45deg);
+                
+            }
+        }
+    }|
 }
