--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -77,4 +77,36 @@ body {
             transform: rotate(45deg);
         }
     }
+
+    .corners {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        & > * {
+            position: relative;
+            background-color:white;
+        }
+        .horizontal-bar {
+            height: 1px;
+            width: 350px;
+            top: 37px;
+            left: 57px;
+        }
+        .vertical-bar {
+            height: 100px;
+            width: 1px;
+            top: 26px;
+            left: 35px;
+        }
+        .losange {
+            background-color: transparent;
+            border: 1px solid white;
+            height: 30px;
+            width: 30px;
+            top: 20px;
+            transform: rotate(45deg);
+            left: 20px;
+        }
+    }
+
 }
