--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,21 +90,26 @@ body .corners > * {
 body .corners .horizontal-bar {
   height: 1px;
   width: 350px;
-  top: 37px;
-  left: 57px;
+  top: 28px;
+  left: 45px;
 }
 body .corners .vertical-bar {
   height: 100px;
   width: 1px;
-  top: 26px;
-  left: 35px;
+  top: 20px;
+  left: 28px;
 }
 body .corners .losange {
   background-color: transparent;
   border: 1px solid white;
-  height: 30px;
-  width: 30px;
-  top: 20px;
+  height: 25px;
+  width: 25px;
+  top: 15px;
   transform: rotate(45deg);
-  left: 20px;
+  left: 15px;
+}
+body .bottom-right {
+  transform: rotate(180deg);
+  bottom: 0;
+  right: 0;
 }/*# sourceMappingURL=style.css.map */
