--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,16 +6,27 @@
   font-family: "details";
   src: url("../ASSETS/FONTS/details.woff2") format("woff2");
 }
-body {
-  height: 100vh;
-  width: 100vw;
-  background: linear-gradient(to bottom, #22232C, #0F0F0F);
-  overflow-x: hidden;
+#index-body {
   overflow-y: hidden;
+  height: 100vh;
+}
+
+body {
+  width: 100vw;
+  background: linear-gradient(to bottom, #2e2f37, #1d1d1d);
+  overflow-x: hidden;
   color: white;
   font-family: "Fraunces";
+  font-size: 2vw;
 }
-body .title {
+body main {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+}
+body main .title {
+  position: sticky;
   height: 100vh;
   display: flex;
   width: 100%;
@@ -26,44 +37,86 @@ body .title {
   font-size: 13vw;
   line-height: 0.9;
 }
-body .title .cursive {
+body main .title .cursive {
   font-family: "details";
   color: #56FF90;
   font-size: 13vw;
 }
-body .title #G {
+body main .title #G {
   margin-right: 1.3vw;
 }
-body nav {
+body main nav {
   width: 27%;
   height: 70px;
-  position: absolute;
-  right: 10px;
-  top: 10px;
+  position: fixed;
+  right: 20px;
+  top: 20px;
   display: flex;
 }
-body nav .right-edge {
+body main nav .right-edge {
   border-right: 1px solid white;
 }
-body nav .link {
+body main nav .link {
   width: 100%;
   height: 70%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2vw;
-  text-decoration: none;
-  color: white;
 }
-body nav .link a {
+body main nav .link a {
+  z-index: 3;
+  font-size: 2vw;
   text-decoration: none;
   color: white;
   transition: all 0.1s;
 }
-body nav .link a:hover {
+body main nav .link a:hover {
   color: #56FF90;
 }
-body .centered-losange--wrapper {
+body main .page-index {
+  position: fixed;
+  top: 32%;
+  height: 40vh;
+  align-items: center;
+  left: 35px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+body main .page-index .losange--wrapper {
+  height: 100%;
+}
+body main .page-index .losange--wrapper .losange {
+  background: transparent;
+  border: 2px solid white;
+  height: 4vh;
+  width: 4vh;
+  transform: rotate(45deg);
+}
+body main .page-index .losange--wrapper #index-losange {
+  background: #56FF90;
+  border: none;
+  transform: scale(0.7);
+}
+body main .scroll-arrow--wrapper {
+  position: absolute;
+  height: 100px;
+  transform: rotate(270deg);
+  width: 40vh;
+  text-align: center;
+  border: 1px solid white;
+  right: -90px;
+  top: 44%;
+}
+body main .box {
+  background: rgba(0, 0, 0, 0.201);
+  border-radius: 20px;
+  width: 80vw;
+  height: auto;
+  padding: 80px;
+  margin-bottom: 100px;
+}
+body main .centered-losange--wrapper {
   position: absolute;
   width: 100vw;
   height: 100vh;
@@ -71,50 +124,55 @@ body .centered-losange--wrapper {
   justify-content: center;
   align-items: center;
 }
-body .centered-losange--wrapper .centered-losange {
+body main .centered-losange--wrapper .centered-losange {
   height: 30vw;
   width: 30vw;
   position: absolute;
   background: linear-gradient(to right, rgba(189, 243, 255, 0.13), transparent);
   transform: rotate(45deg);
 }
-body .corners {
+body main .losange {
+  background: transparent;
+  border: 2px solid white;
+  height: 25px;
+  width: 25px;
+  transform: rotate(45deg);
+}
+body main .corners {
   position: absolute;
   top: 0px;
   left: 0px;
 }
-body .corners > * {
+body main .corners > * {
   position: relative;
   background-color: white;
 }
-body .corners .horizontal-bar {
+body main .corners .horizontal-bar {
   height: 1px;
   width: 30vw;
   top: 29px;
   left: 47px;
 }
-body .corners .mini-horizontal-bar {
+body main .corners .mini-horizontal-bar {
   height: 1px;
   width: 10vw;
   top: 10px;
   left: 40px;
 }
-body .corners .vertical-bar {
+body main .corners .vertical-bar {
   height: 7.5vh;
   width: 1px;
   top: 19px;
   left: 29px;
 }
-body .corners .losange {
-  background-color: transparent;
-  border: 2px solid white;
+body main .corners .losange {
   height: 25px;
   width: 25px;
   top: 15px;
-  transform: rotate(45deg);
   left: 15px;
+  background: transparent;
 }
-body .bottom-right {
+body main .bottom-right {
   transform: rotate(180deg);
   bottom: 0;
   right: 0;
