--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -31,6 +31,7 @@ body {
             position: sticky;
             height: 100vh;
             display: flex;
+            z-index: 2;
             width: 100%;
             flex-direction: column;
             justify-content: center;
@@ -46,26 +47,39 @@ body {
         }
     
         nav {
-            width: 27%;
-            height: 70px;
             position: fixed;
-            right: 20px;
-            top: 20px;
-            display: flex;
-            .right-edge { border-right: 1px solid white; }
-            .link {
-                width: 100%;
-                height: 70%;
+            z-index: 3;
+            width: 100vw;
+            height: 70px;
+            top: 0;
+            left: 0;
+            backdrop-filter: blur(8px);
+            display:flex;
+            align-items: center;
+            justify-content: right;
+            .nav-section {
+                position: relative;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                a {
-                    z-index: 3;
-                    font-size : 2vw;
-                    text-decoration: none;
-                    color: white;
-                    transition: all 0.1s;
-                    &:hover { color: $details-color; }
+                width: 27%;
+                right: 20px;
+                height: 60px;
+                .right-edge { border-right: 1px solid white; }
+                .link {
+                    width: 100%;
+                    height: 70%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    a {
+                        z-index: 4;
+                        font-size : 2vw;
+                        text-decoration: none;
+                        color: white;
+                        transition: all 0.1s;
+                        &:hover { color: $details-color; }
+                    }
                 }
             }
         }
@@ -75,7 +89,7 @@ body {
             top: 32%;
             height: 40vh;
             align-items: center;
-            left: 35px;
+            left: 1vw;
             display: flex;
             justify-content: center;
             flex-direction: column;
@@ -101,10 +115,17 @@ body {
             height: 100px;
             transform: rotate(270deg);
             width: 40vh;
+            font-size: $text-size;
             text-align: center;
-            border: 1px solid white;
-            right: -90px;
+            right: -8vw;
             top: 44%;
+            margin-bottom: 10px;
+            .scroll { margin-bottom: 0.47vw; }
+            .bar {
+                width: 100%;
+                height: 1px;
+                background: white;
+            }
         }
 
         .box {
@@ -121,6 +142,7 @@ body {
             width: 100vw;
             height: 100vh;
             display: flex;
+            z-index: 1;
             justify-content: center;
             align-items: center;
             .centered-losange {
@@ -143,6 +165,7 @@ body {
         .corners {
             position: absolute;
             top: 0px;
+            z-index: 3;
             left: 0px;
             & > * {
                 position: relative;
@@ -173,6 +196,7 @@ body {
         } .bottom-right {
             transform: rotate(180deg);
             bottom: 0;
+            top: 100%;
             right: 0;
         }
     }
