--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -27,6 +27,18 @@ body {
         flex-direction: column;
         justify-items:center;
         align-items:center;
+        // .loading-logo--wrapper {
+        //     height: 100vh;
+        //     width: 100vw;
+        //     background: black;
+        //     display: flex;
+        //     justify-content: center;
+        //     align-items: center;
+        //     .logo {
+        //         background-image: url("../ASSETS/IMAGES/logo.png");
+        //     }
+        // }
+
         .title {
             position: sticky;
             height: 100vh;
