--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,11 +43,11 @@ body main .title {
   display: flex;
   z-index: 2;
   width: 100%;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: "Fraunces";
   font-size: 13vw;
+  flex-direction: column;
   line-height: 0.9;
 }
 body main .title .cursive {
@@ -151,6 +151,33 @@ body main .box {
   height: auto;
   padding: 80px;
   margin-bottom: 100px;
+}
+body main .box .box-title {
+  position: sticky;
+  width: 100%;
+  line-height: 0.9;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Fraunces";
+  color: white;
+  background: transparent;
+  border: none;
+  flex-direction: column;
+  font-size: 6vw;
+}
+body main .box .box-title .cursive {
+  font-family: "details";
+  color: #56FF90;
+  font-size: 6vw;
+}
+body main .box .box-title #shell-cursive {
+  font-size: 7vw;
+}
+body main .box .box-title .less {
+  display: none;
+  opacity: 0.3;
 }
 body main .centered-losange--wrapper {
   position: absolute;
