--- a/CSS/_contact.scss
+++ b/CSS/_contact.scss
@@ -1,9 +1,31 @@
+$component-background : rgba(0, 0, 0, 0.201);
 
 #contact-body {
     overflow: hidden;
     #contact-main {
         #N {
             margin-right: 1.9vw;
+        }
+        #intro-to-disappear {
+            width: 100vw;
+            height: 100vh;
+            position: absolute;
+            top: 0;
+            opacity: 100%;
+            left: 0;
+        }
+
+        #to-enter {
+            width: 100%;
+            height: 100%;
+            opacity: 0%;
+            top: 0;
+            left: 0;
+            form {
+                height: 60vh;
+                width: 40vw;
+                background: $component-background;
+            }
         }
     }
 }
