--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,14 +22,36 @@
 #contact-body #contact-main #N {
   margin-right: 1.9vw;
 }
+#contact-body #contact-main #intro-to-disappear {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  opacity: 100%;
+  left: 0;
+}
+#contact-body #contact-main #to-enter {
+  width: 100%;
+  height: 100%;
+  opacity: 0%;
+  top: 0;
+  left: 0;
+}
+#contact-body #contact-main #to-enter form {
+  height: 60vh;
+  width: 40vw;
+  background: rgba(0, 0, 0, 0.201);
+}
 
 body {
   width: 100vw;
+  height: 100vh;
   background: linear-gradient(to bottom, #2e2f37, #1d1d1d);
   overflow-x: hidden;
   color: white;
   font-family: "Fraunces";
   font-size: 2vw;
+  letter-spacing: 1px;
 }
 body main {
   display: flex;
@@ -65,8 +87,6 @@ body main nav {
   height: 70px;
   top: 0;
   left: 0;
-  -webkit-backdrop-filter: blur(8px);
-          backdrop-filter: blur(8px);
   display: flex;
   align-items: center;
   justify-content: right;
@@ -178,6 +198,12 @@ body main .box .box-title #shell-cursive {
 body main .box .box-title .less {
   display: none;
   opacity: 0.3;
+}
+body main .box .paragraph {
+  margin-top: 20px;
+  padding: 50px;
+  color: #bfcdc4;
+  letter-spacing: 1px;
 }
 body main .centered-losange--wrapper {
   position: absolute;
